--- a/test_services.html
+++ b/test_services.html
@@ -17,7 +17,7 @@
             margin-top: 50px;
         }
     </style>
-    <script src="../AsyncAjaxCallbackAndPromise/http_services.js"></script>
+    <script src="../http_services.js"></script>
 </head>
 <body>
     <h1>The Test Services Result</h1>
@@ -30,31 +30,31 @@
         makePromiseCall("GET", getURL, true)
             .then(responseText => {
                 getElem.textContent = "Get User Data: "+responseText;
-        })
-        .catch(error => {
-            getElem.textContent = "GET Error Status: "+JSON.stringify(error);
-        });
+            })
+            .catch(error => {
+                getElem.textContent = "GET Error Status: "+JSON.stringify(error);
+            });
 
         const deleteElem = document.querySelector("#delete_services");
         const deleteURL = "http://127.0.0.1:3000/employees/4";
         makePromiseCall("DELETE", deleteURL, false)
             .then(responseText => {
                 deleteElem.textContent = "Delete User Data: "+responseText;
-        })
-        .catch(error => {
-            deleteElem.textContent = "DELETE Error Status: "+JSON.stringify(error);
-        });
+            })
+            .catch(error => {
+                deleteElem.textContent = "DELETE Error Status: "+JSON.stringify(error);
+            });
 
         const postElem = document.querySelector("#post_services");
         const postURL = "http://127.0.0.1:3000/employees";
         const emplData = {"name": "Vanshika","salary": "700000"};
-        makePromiseCall("POST", postURL, async, emplData)
+        makePromiseCall("POST", postURL, true, emplData)
             .then(responseText => {
                 postElem.textContent = "New User Added: "+responseText;
-        })
-        .catch(error => {
-            postElem.textContent = "POST Error Status: "+JSON.stringify(error);
-        });
+            })
+            .catch(error => {
+                postElem.textContent = "POST Error Status: "+JSON.stringify(error);
+            });
     </script>
 </body>
 </html>
